# RpgEngine2

./: .gitignore  CMakeLists.txt  Makefile  README.md  basic_run.txt  main.cpp
config/: itemtypes.json
config/calculators/: attack_damage.calc  damage_mitigation.calc  test_prog_1.calc
config/items/: belt_of_strength.json  blue_key.json  bronze_shield.json  bronze_sword.json  canned_peas.json  fellowship_ring.json  lockpick.json  testitem1.json  turkey_leg.json
config/locations/: test1.json
docs/: Config.md  Grammer.md  ItemManagement.md  RequirementApplication.md  RpgEngine.dia
docs/jschema/: schema.json
include/: Attackable.hpp  AttackableHasDrops.hpp  Door.hpp  Entity.hpp  EntityBase.hpp  Furniture.hpp  HasEquipment.hpp  Inventory.hpp  Item.hpp  ItemFactory.hpp  Location.hpp  Misc.h  Npc.hpp  Player.hpp  RequirementEngine.hpp  RequirementsEngine.hpp  Room.hpp  RpnCalculator.hpp  Session.hpp
lib/: levenshtein.c  levenshtein.h
src/: Attackable.cpp  AttackableHasDrops.cpp  Door.cpp  Entity.cpp  EntityBase.cpp  Furniture.cpp  HasEquipment.cpp  Inventory.cpp  Item.cpp  ItemFactory.cpp  Location.cpp  Misc.cpp  Npc.cpp  Player.cpp  RequirementEngine.cpp  RequirementsEngine.cpp  Room.cpp  Session.cpp
testprogs/: RequirementEngineTest.cpp  RequirementsEngineTest.cpp  rpncalc.cpp
testprogs/test/: re-test.json
